Git ignore change

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .pio
 .git
 .idea
-/cmake-build-nano33ble
-./cmake-build-nano33ble
+cmake-build-nano33ble/
 CMakeListsPrivate.txt
-/__pycache__
-./__pycache__
-/venv
-./venv
+venv/
 __pycache__/
